--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
+    <div class="wrap">
     <div class="container">
       <div id="my-keen-slider" class="keen-slider">
         <div class="keen-slider__slide">
@@ -38,6 +39,7 @@
           <img src="img/9.jpg" alt="">
         </div>
       </div>
+    </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/keen-slider@latest/keen-slider.js"></script>
