--- a/index.html
+++ b/index.html
@@ -45,20 +45,36 @@
     <script src="https://cdn.jsdelivr.net/npm/keen-slider@latest/keen-slider.js"></script>
     <script>
 
-      var slider = new KeenSlider("#my-keen-slider", {
-        loop: "true",
-        mode: "snap",
-        slides: {
-              origin: "center",
-              perView: "auto",
-              spacing: 40,
-            },
-        breakpoints: {
-          "(orientation: portrait)": {
-            vertical: "true"
+      var ResizePlugin = (slider) => {
+        var observer = new ResizeObserver(function () {
+          slider.update();
+        });
+
+        slider.on("created", () => {
+          observer.observe(slider.container);
+        });
+        slider.on("destroyed", () => {
+          observer.unobserve(slider.container);
+        });
+      };
+      var slider = new KeenSlider(
+        "#my-keen-slider",
+        {
+          loop: "true",
+          mode: "snap",
+          slides: {
+            origin: "center",
+            perView: "auto",
+            spacing: 40
           },
+          breakpoints: {
+            "(orientation: portrait)": {
+              vertical: "true"
+            }
+          }
         },
-      })
+        [ResizePlugin]
+      );
 
     </script>
   </body>
